fixed footer spacing on iphone

--- a/frontend/src/pages/home/Home.css
+++ b/frontend/src/pages/home/Home.css
@@ -1,7 +1,7 @@
 .home-content {
     width: 100vw;
     min-height: 80vh;
-    margin: 110px auto -30px auto;
+    margin: 110px auto -50px auto;
 }
 
 .home-lead {
@@ -22,8 +22,7 @@
 
 @media screen and (max-width: 499px) {
     .home-content {
-        max-height: 800px;
-        margin: 85px auto 0px auto;
+        margin: 85px auto -130px auto;
     }
 
     .home-lead {
@@ -33,10 +32,6 @@
 
     .home-title {
         font-size: 3.125rem;
-    }
-
-    .push {
-        height: 25px;
     }
 
 }
